Don't append new articles to the bottom of the list

BUG: 247473
MERGE: 4.8
FIXED-IN: 4.8